# intel-tex-rs

./: .dockerignore  .gitmodules  CHANGES.md  Cargo.toml  Dockerfile  README.md  build.rs
examples/: credit.txt  main.rs
src/: astc.rs  bc1.rs  bc3.rs  bc4.rs  bc5.rs  bc6h.rs  bc7.rs  etc1.rs  kernel.ispc  lib.rs
src/ispc/: kernel.rs  kernel_astc.rs  kernel_astcx86_64-pc-windows-msvc.lib  kernelx86_64-pc-windows-msvc.lib
