[package]
name = "intel_tex"
version = "0.1.4"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust bindings for Intel's ISPC texture compressor."
homepage = "https://github.com/gwihlidal/intel-tex-rs"
repository = "https://github.com/gwihlidal/intel-tex-rs"
documentation = "https://docs.rs/intel_tex"
readme = "README.md"
keywords = ["texture", "image", "compress", "intel", "ispc"]
categories = ["rendering", "rendering::engine", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/astc.rs",
    "src/bc1.rs",
    "src/bc3.rs",
    "src/bc6h.rs",
    "src/bc7.rs",
    "src/etc1.rs",
    "src/lib.rs",
    "src/ispc/kernel_astc.rs",
    "src/ispc/kernel.rs",
    "src/ispc/kernel_astcx86_64-pc-windows-msvc.lib",
    "src/ispc/kernelx86_64-pc-windows-msvc.lib",
    "src/ispc/libkernel_astcx86_64-apple-darwin.a",
    "src/ispc/libkernelx86_64-apple-darwin.a",
    "src/ispc/libkernel_astcx86_64-unknown-linux-gnu.a",
    "src/ispc/libkernelx86_64-unknown-linux-gnu.a",
    "build.rs",
    "Cargo.toml",
]
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/intel-tex-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
ispc_rt = "1.0.2"

[build-dependencies]
ispc_compile = { version = "1.0.4", optional = true }
ispc_rt = "1.0.2"

[features]
ispc = ["ispc_compile"]

[dev-dependencies]
ddsfile = "0.2.3"
image = "0.21.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
